# gdock-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: run-example.py
python/gdock/: __init__.py
src/: lib.rs
tests/: test_bindings.py
